--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-rate-limit": "^6.3.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
