--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 node_modules/
-images/
 .env
 Documents/
 my.drwaio
 .bak
 
-
+#discard images but not dir
+images/posts/*
+images/persons/*
+images/covers/*
+!images/posts/.gitkeep
+!images/persons/.gitkeep
+!images/covers/.gitkeep
